# PasameloaExcel-core

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/routers/: extraction.py
app/application/use_cases/: __init__.py  (+3 more)
app/core/: __init__.py  config.py  dependencies.py  logging_config.py  request_context.py
app/exporters/: __init__.py  excel_exporter.py
app/parsing/: __init__.py  contaapp_adapter.py  types.py
app/schemas/: export.py  learning.py  preview.py  row.py  support.py
app/services/: export_service.py  feedback_classifier.py  feedback_diff_service.py  learning_logger.py  parser_service.py  preview_service.py  support_service.py
scripts/: analyze_learning_logs.py
tests/: batch_runner.py  conftest.py  test_credicoop1_template.py  test_credicoop2_template.py  test_export_endpoint.py  test_export_naming_domain.py  test_export_service.py  test_extract_preview_endpoint.py  test_formosa1_template.py  test_galicia1_template.py  test_health.py  test_learning_domain.py  test_learning_feedback.py  test_nacion1_template.py  test_nacion2_template.py  test_nbch1_template.py  test_nbch2_template.py  test_origin_guard_middleware.py  test_parser_confidence.py  test_preview_domain.py  test_preview_quality_flag.py  test_rate_limit_middleware.py  test_request_logging_middleware.py  test_santander1_template.py  test_settings_cors.py  test_settings_security.py  test_support_endpoint.py  test_support_service.py  test_template_selector.py  test_use_cases.py
(+42 files in other folders)
